fix(cors,nginx): add Angular fileReplacements for environment.prod.ts, configure Nginx /api/ reverse proxy, and enable Railway CORS origin patterns